--- a/email/pom.xml
+++ b/email/pom.xml
@@ -108,6 +108,11 @@
                     </deployment>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.3.RELEASE</version>
+            </plugin>
         </plugins>
     </build>
 </project>
