--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
     <description>Project named Green City by SoftServe ITA team Lv-427.Java</description>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>core</module>
+        <module>email</module>
+        <module>dao</module>
+    </modules>
+
     <properties>
         <java.version>11</java.version>
         <maven.compiler.source>11</maven.compiler.source>
@@ -53,11 +59,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.3.RELEASE</version>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>${checkstyle-maven-plugin.version}</version>
@@ -76,10 +77,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <modules>
-        <module>core</module>
-        <module>email</module>
-    </modules>
-
 </project>
