--- a/core/pom.xml
+++ b/core/pom.xml
@@ -15,10 +15,6 @@
     <name>core</name>
 
     <properties>
-        <junit-jupiter.version>5.4.2</junit-jupiter.version>
-        <mockito-junit-jupiter.version>3.3.3</mockito-junit-jupiter.version>
-        <mockito-core.version>3.3.3</mockito-core.version>
-        <modelmapper.version>2.3.5</modelmapper.version>
         <caffeine.version>2.8.1</caffeine.version>
         <liquibase.version>3.8.4</liquibase.version>
         <jackson.version>2.10.1</jackson.version>
@@ -32,6 +28,18 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>greencity</groupId>
+            <artifactId>service-api</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>greencity</groupId>
+            <artifactId>service</artifactId>
+            <version>${project.version}</version>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>dao</artifactId>
@@ -246,12 +254,7 @@
             <artifactId>poi-ooxml</artifactId>
             <version>4.1.2</version>
         </dependency>
-        <dependency>
-            <groupId>greencity</groupId>
-            <artifactId>service-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
+
     </dependencies>
 
     <build>
