--- a/service/pom.xml
+++ b/service/pom.xml
@@ -19,6 +19,8 @@
             <artifactId>dao</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
+            <!--TODO #1618
+            <scope>runtime</scope>-->
         </dependency>
         <dependency>
             <groupId>greencity</groupId>
@@ -34,11 +36,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>2.0.1.Final</version>
         </dependency>
         <dependency>
             <groupId>org.modelmapper</groupId>
