--- a/service/pom.xml
+++ b/service/pom.xml
@@ -76,6 +76,12 @@
             <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-storage</artifactId>
+            <version>1.105.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
