--- a/service/pom.xml
+++ b/service/pom.xml
@@ -16,6 +16,8 @@
 
     <properties>
         <apache.commons.version>3.10</apache.commons.version>
+        <commons-fileupload.version>1.3</commons-fileupload.version>
+        <commons-io.version>2.6</commons-io.version>
     </properties>
 
     <dependencies>
@@ -90,12 +92,12 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.6</version>
+            <version>${commons-io.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-            <version>1.3</version>
+            <version>${commons-fileupload.version}</version>
         </dependency>
     </dependencies>
 
