--- a/service/pom.xml
+++ b/service/pom.xml
@@ -105,6 +105,10 @@
             <version>2.0.3.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
