--- a/service/pom.xml
+++ b/service/pom.xml
@@ -18,6 +18,7 @@
         <apache.commons.version>3.10</apache.commons.version>
         <commons-fileupload.version>1.3</commons-fileupload.version>
         <commons-io.version>2.6</commons-io.version>
+        <org.springframework.social.version>2.0.3.RELEASE</org.springframework.social.version>
     </properties>
 
     <dependencies>
@@ -102,7 +103,7 @@
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-facebook</artifactId>
-            <version>2.0.3.RELEASE</version>
+            <version>${org.springframework.social.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
