changed log level

--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.root=info
+logging.level.root=error
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
 logging.level.greencity.exception.handler.CustomExceptionHandler=trace
 logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
