--- a/dao/src/test/resources/application.properties
+++ b/dao/src/test/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Logger
-logging.level.root=info
+logging.level.root=error
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
 logging.level.greencity.exception.handler.CustomExceptionHandler=trace
 logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
