--- a/email/src/test/resources/application.properties
+++ b/email/src/test/resources/application.properties
@@ -14,7 +14,7 @@ sender.email.address=${EMAIL_ADDRESS}
 google.clientId=${GOOGLE_CLIENT_ID}
 
 # Logger
-logging.level.root=info
+logging.level.root=error
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
 logging.level.greencity.exception.handler.CustomExceptionHandler=trace
 logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
