--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -16,6 +16,8 @@
     <properties>
         <junit-jupiter.version>5.4.2</junit-jupiter.version>
         <liquibase.version>3.8.4</liquibase.version>
+        <postgresql.version>42.2.5</postgresql.version>
+        <testcontainers.version>1.15.0-rc2</testcontainers.version>
     </properties>
 
     <dependencies>
@@ -75,13 +77,13 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
-            <version>1.15.0-rc2</version>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.5</version>
+            <version>${postgresql.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
