changed packaging type in service and service-api modules

--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -17,6 +17,7 @@
         <swagger.version>2.9.2</swagger.version>
         <io.jsonwebtoken.version>0.9.1</io.jsonwebtoken.version>
     </properties>
+    <packaging>pom</packaging>
 
     <dependencies>
         <dependency>
