changes in pom.xml files

--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -18,6 +18,18 @@
         <liquibase.version>3.8.4</liquibase.version>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>greencity.DaoApplication</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>javax.validation</groupId>
