--- a/service/pom.xml
+++ b/service/pom.xml
@@ -20,7 +20,18 @@
         <commons-io.version>2.6</commons-io.version>
         <org.springframework.social.version>2.0.3.RELEASE</org.springframework.social.version>
     </properties>
-    <packaging>pom</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
