--- a/email/src/main/resources/application-dev.properties
+++ b/email/src/main/resources/application-dev.properties
@@ -3,15 +3,15 @@ server.port=8090
 # Mail sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${EMAIL_ADDRESS}
-spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.username=mail.sender.greencity@gmail.com
+spring.mail.password=Lv-450.Java_Password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 address=http://localhost:8080
 client.address=http://localhost:4200
 econews.address=http://localhost:4200/welcome
-sender.email.address=${EMAIL_ADDRESS}
-google.clientId=${GOOGLE_CLIENT_ID}
+sender.email.address=mail.sender.greencity@gmail.com
+google.clientId=129513550972-eu9ej46rviv1ac8q14at62t2k5qon1pu.apps.googleusercontent.com
 
 # Logger
 logging.level.root=info
@@ -20,6 +20,6 @@ logging.level.greencity.exception.handler.CustomExceptionHandler=trace
 logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
 
 # RabbitMQ
-spring.rabbitmq.host=${RABBITMQ_HOST}
-spring.rabbitmq.password=${RABBITMQ_PASSWORD}
-spring.rabbitmq.username=${RABBITMQ_USERNAME}
+spring.rabbitmq.host=localhost
+spring.rabbitmq.password=guest
+spring.rabbitmq.username=guest
