--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -1,13 +1,13 @@
 # Datasource
 spring.datasource.url=jdbc:postgresql://localhost:5432/test
-spring.datasource.username=${DATASOURCE_USER}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 server.port=0
 # Liquibase
-spring.liquibase.url=jdbc:postgresql://localhost:5432/test
-spring.liquibase.user=${DATASOURCE_USER}
-spring.liquibase.password=${DATASOURCE_PASSWORD}
+spring.liquibase.url=jdbc:postgresql://localhost:5432/greencity
+spring.liquibase.user=postgres
+spring.liquibase.password=root
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 # Hibernate
@@ -18,15 +18,15 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 # Mail sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${EMAIL_ADDRESS}
-spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.username=mail.sender.greencity@gmail.com
+spring.mail.password=Lv-450.Java_Password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 address=http://localhost:8080
 client.address=http://localhost:4200
 econews.address=http://localhost:4200/welcome
-sender.email.address=${EMAIL_ADDRESS}
-google.clientId=${GOOGLE_CLIENT_ID}
+sender.email.address=mail.sender.greencity@gmail.com
+google.clientId=129513550972-eu9ej46rviv1ac8q14at62t2k5qon1pu.apps.googleusercontent.com
 # Token expiration time
 accessTokenValidTimeInMinutes=120
 refreshTokenValidTimeInMinutes=600
@@ -39,22 +39,22 @@ logging.level.greencity.exception.handler.CustomExceptionHandler=trace
 logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
 # RabbitMQ
 messaging.rabbit.email.topic=email-topic-exchange
-spring.rabbitmq.host=${RABBITMQ_HOST}
-spring.rabbitmq.password=${RABBITMQ_PASSWORD}
-spring.rabbitmq.username=${RABBITMQ_USERNAME}
+spring.rabbitmq.host=localhost
+spring.rabbitmq.password=guest
+spring.rabbitmq.username=guest
 # Cache
 spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
 #Cloud Storage
-bucketName=${BUCKET_NAME}
-staticUrl=${STATIC_URL}
+bucketName=staging.greencity-c5a3a.appspot.com
+staticUrl=https://storage.cloud.google.com/
 # Default profile picture for user
-defaultProfilePicture=${DEFAULT_PROFILE_PICTURE}
+defaultProfilePicture=https://storage.cloud.google.com/staging.greencity-c5a3a.appspot.com/3d1a4092-c31e-4a0f-814b-57a0e4de0851
 # Facebook
-spring.social.facebook.app-id=${FACEBOOK_APP_ID}
-spring.social.facebook.app-secret=${FACEBOOK_APP_SECRET}
+spring.social.facebook.app-id=1583587788483701
+spring.social.facebook.app-secret=00d1c3ae739dac5b3a7a72abdaca5d80
 # File upload limit
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
 server.tomcat.max-http-post-size=10MB
 # Time after a user last activity time to check if a user is online
 greencity.time.after.last.activity=300000
