Resttemplate for UserArgumentResolver

--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -65,3 +65,6 @@ greencity.time.after.last.activity=300000
 
 #Thymeleaf
 spring.thymeleaf.cache=false
+
+#RestTemplate
+greencityuser.server.address = http://localhost:8060
