--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -62,3 +62,6 @@ spring.servlet.multipart.max-request-size=10MB
 server.tomcat.max-http-post-size=10MB
 # Time after a user last activity time to check if a user is online
 greencity.time.after.last.activity=300000
+
+#RestTemplate
+greencityuser.server.address = ${GREENCITYUSER_SERVER_ADDRESS}
