Remove User for GreenCity

--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -81,5 +81,9 @@
             <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
     </dependencies>
 </project>
