Add uploading/downloading files

--- a/chat/src/main/resources/application-dev.properties
+++ b/chat/src/main/resources/application-dev.properties
@@ -26,3 +26,6 @@ verifyEmailTimeHour=24
 
 # File folder
 fileFolder = ${ABSOLUTE_PATH}
+
+spring.servlet.multipart.max-file-size = 100MB
+spring.servlet.multipart.max-request-size = 100MB
