azure_cloud_storage

--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -65,3 +65,7 @@ greencity.time.after.last.activity=300000
 
 #RestTemplate
 greencityuser.server.address = ${GREENCITYUSER_SERVER_ADDRESS}
+
+#AzureCloudStorage
+azure.connection.string=${AZURE_CONNECTION_STRING}
+azure.container.name=${AZURE_CONTAINER_NAME}
