--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -4,20 +4,17 @@ spring.datasource.username=${DATASOURCE_USER}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 server.port=8080
-
 # Liquibase
 spring.liquibase.url=${DATASOURCE_URL}
 spring.liquibase.user=${DATASOURCE_USER}
 spring.liquibase.password=${DATASOURCE_PASSWORD}
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-
 # Hibernate
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
-spring.jpa.database-platform =org.hibernate.dialect.PostgreSQL9Dialect
-
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 # Mail sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -30,19 +27,16 @@ client.address=http://localhost:4200
 econews.address=http://localhost:4200/welcome
 sender.email.address=${EMAIL_ADDRESS}
 google.clientId=${GOOGLE_CLIENT_ID}
-
 # Token expiration time
 accessTokenValidTimeInMinutes=120
 refreshTokenValidTimeInMinutes=600
 tokenKey=123123123
 verifyEmailTimeHour=24
-
 # Logger
 logging.level.root=info
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
 logging.level.greencity.exception.handler.CustomExceptionHandler=trace
 logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
-
 # RabbitMQ
 messaging.rabbit.email.topic=email-topic-exchange
 spring.rabbitmq.host=${RABBITMQ_HOST}
@@ -62,9 +56,10 @@ spring.servlet.multipart.max-request-size=10MB
 server.tomcat.max-http-post-size=10MB
 # Time after a user last activity time to check if a user is online
 greencity.time.after.last.activity=300000
-
 #Thymeleaf
 spring.thymeleaf.cache=false
-
 #RestTemplate
-greencityuser.server.address = http://localhost:8060
+greencityuser.server.address=http://localhost:8060
+#AzureCloudStorage
+azure.connection.string=${AZURE_CONNECTION_STRING}
+azure.container.name=${AZURE_CONTAINER_NAME}
