replace_google_cloud_storage_to_azure

--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -68,3 +68,7 @@ spring.thymeleaf.cache=false
 
 #RestTemplate
 greencityuser.server.address = http://localhost:8060
+
+#AzureCloudStorage
+azure.connection.string=${AZURE_CONNECTION_STRING}
+azure.container.name=${AZURE_CONTAINER_NAME}
