fix bug with cache clearing

--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -49,7 +49,7 @@ spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
 # Cache
-spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
+spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=86400s
 #Cloud Storage
 bucketName=${BUCKET_NAME}
 staticUrl=${STATIC_URL}
