Removed code smells

--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -25,7 +25,7 @@ spring.mail.username=${EMAIL_ADDRESS}
 spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-address=http://localhost:8080
+address=http://192.168.137.146:8080
 client.address=http://localhost:4200
 econews.address=http://localhost:4200/welcome
 sender.email.address=${EMAIL_ADDRESS}
@@ -57,7 +57,7 @@ greencity.time.after.last.activity=300000
 spring.thymeleaf.cache=false
 
 #RestTemplate
-greencityuser.server.address = http://localhost:8060
+greencityuser.server.address = http://192.168.137.146:8060
 
 #AzureCloudStorage
 azure.connection.string=${AZURE_CONNECTION_STRING}
