Removed code smells

--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -26,8 +26,8 @@ spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 address=http://192.168.137.146:8080
-client.address=http://localhost:4200
-econews.address=http://localhost:4200/welcome
+client.address=http://192.168.137.146:4200
+econews.address=http://192.168.137.146/welcome
 sender.email.address=${EMAIL_ADDRESS}
 google.clientId=${GOOGLE_CLIENT_ID}
 
