--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -58,6 +58,7 @@ spring.thymeleaf.cache=false
 
 #RestTemplate
 greencityuser.server.address = http://localhost:8060
+greencitychat.server.address = http://localhost:8030
 
 #AzureCloudStorage
 azure.connection.string=${AZURE_CONNECTION_STRING}
