added integration tests for LanguageRepo

--- a/core/src/main/resources/application-test.properties
+++ b/core/src/main/resources/application-test.properties
@@ -5,8 +5,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #RestTemplate
-greencity.redirect.user-server-address=http://localhost:8080
-greencityuser.server.address = mock
+greencityuser.server.address=http://localhost:8080
 
 # Token expiration time
 tokenKey=123123123
