added service account

--- a/core/src/main/resources/application-docker.properties
+++ b/core/src/main/resources/application-docker.properties
@@ -62,3 +62,6 @@ greencityuser.server.address = http://user:8060
 #AzureCloudStorage
 azure.connection.string=${AZURE_CONNECTION_STRING}
 azure.container.name=${AZURE_CONTAINER_NAME}
+
+# Email for service-to-service communication with GreenCityUser
+spring.liquibase.parameters.service-email=service@greencity.ua
