--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -70,3 +70,6 @@ greencityuser.server.address = ${GREENCITYUSER_SERVER_ADDRESS}
 #AzureCloudStorage
 azure.connection.string=${AZURE_CONNECTION_STRING}
 azure.container.name=${AZURE_CONTAINER_NAME}
+
+# Email for service-to-service communication with GreenCityUser
+spring.liquibase.parameters.service-email=service@greencity.ua
