Update az-cd-pipeline.yml for Azure Pipelines

--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -104,6 +104,9 @@ stages:
         repository: 'skyere/greencity'
         command: 'buildAndPush'
         Dockerfile: 'Dockerfile'
+        tags: |
+          $(Build.BuildId)
+          latest
 
 - stage: Deploy
   jobs:
