Update az-cd-pipeline.yml for Azure Pipelines

--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -99,6 +99,7 @@ stages:
         artifactName: '$(artifactName)'
     
     - task: Docker@2
+      displayName: Build image
       inputs:
         containerRegistry: 'Dockerhub_Skyere'
         repository: 'skyere/greencity'
