--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -7,3 +7,6 @@ server.tomcat.max-http-post-size=100MB
 
 # Email for service-to-service communication with GreenCityUser
 spring.liquibase.parameters.service-email=service@greencity.ua
+
+# Address(es) of Kafka bootstrap server(s)
+kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
