--- a/service/pom.xml
+++ b/service/pom.xml
@@ -125,6 +125,11 @@
             <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.7.2</version>
+        </dependency>
     </dependencies>
 
 </project>
