--- a/core/src/main/resources/application-test.properties
+++ b/core/src/main/resources/application-test.properties
@@ -13,5 +13,4 @@ accessTokenValidTimeInMinutes=120
 refreshTokenValidTimeInMinutes=600
 verifyEmailTimeHour=24
 
-
-
+kafka.bootstrap-servers=localhost:9092
