--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -8,5 +8,6 @@ server.tomcat.max-http-post-size=100MB
 # Email for service-to-service communication with GreenCityUser
 spring.liquibase.parameters.service-email=service@greencity.ua
 
-# Address(es) of Kafka bootstrap server(s)
+# Kafka configuration
+kafka.enable=${KAFKA_ENABLE:false}
 kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
