changed UserActionMessage structure, added tests and other minor edits

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.liquibase.parameters.service-email=service@greencity.ua
 # Kafka configuration
 kafka.enable=${KAFKA_ENABLE:false}
 kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+# Kafka topics
+kafka.topic.user.actions=greencity.user.actions
