fixed circular dependency 3

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -31,6 +31,12 @@
         </dependency>
         <dependency>
             <groupId>greencity</groupId>
+            <artifactId>dao</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>greencity</groupId>
             <artifactId>service-api</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
