--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>greencity</groupId>
             <artifactId>dao</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
